@startuml ERD_POS
hide methods
hide stereotypes
skinparam entity {
  BackgroundColor LightYellow
  BorderColor DarkOrange
}

entity USER {
  * id : VARCHAR <<PK>>
  --
  name : TEXT
  * email : VARCHAR <<UK>>
  role : TEXT
  createdAt : DATETIME
  updatedAt : DATETIME
}

entity CATEGORY {
  * id : VARCHAR <<PK>>
  --
  nama : TEXT
  createdAt : DATETIME
}

entity UNIT {
  * id : VARCHAR <<PK>>
  --
  nama : TEXT
  createdAt : DATETIME
}

entity PRODUCT {
  * id : VARCHAR <<PK>>
  --
  * categoryId : VARCHAR <<FK>>
  * unitId : VARCHAR <<FK>>
  * sku : VARCHAR <<UK>>
  nama : TEXT
  hpp : DECIMAL
  hargaJual : DECIMAL
  stok : DECIMAL
  minStok : DECIMAL
  isService : BOOLEAN
  deletedAt : DATETIME
}

entity CUSTOMER {
  * id : VARCHAR <<PK>>
  --
  nama : TEXT
  nomorHp : TEXT
  deletedAt : DATETIME
}

entity SUPPLIER {
  * id : VARCHAR <<PK>>
  --
  nama : TEXT
  nomorHp : TEXT
  email : TEXT
  isActive : BOOLEAN
}

entity ORDER {
  * id : VARCHAR <<PK>>
  --
  * customerId : VARCHAR <<FK>>
  userId : VARCHAR <<FK>>
  * nomorOrder : VARCHAR <<UK>>
  channel : ENUM
  statusProduksi : ENUM
  statusPembayaran : ENUM
  metodePembayaran : ENUM
  subtotal : DECIMAL
  diskon : DECIMAL
  ongkir : DECIMAL
  grandTotal : DECIMAL
  deadline : DATETIME
  deletedAt : DATETIME
}

entity ORDER_ITEM {
  * id : VARCHAR <<PK>>
  --
  * orderId : VARCHAR <<FK>>
  * productId : VARCHAR <<FK>>
  nama : TEXT
  harga : DECIMAL
  qty : DECIMAL
  subtotal : DECIMAL
}

entity DESIGN_FILE {
  * id : VARCHAR <<PK>>
  --
  * orderId : VARCHAR <<FK>>
  * uploadedById : VARCHAR <<FK>>
  nama : TEXT
  filePath : TEXT
}

entity KARYAWAN {
  * id : VARCHAR <<PK>>
  --
  nama : TEXT
  posisi : TEXT
  isActive : BOOLEAN
}

entity SPK {
  * id : VARCHAR <<PK>>
  --
  * orderId : VARCHAR <<FK, UK>>
  * karyawanId : VARCHAR <<FK>>
  userId : VARCHAR <<FK>>
  nomorSpk : VARCHAR <<UK>>
  tahapProduksi : ENUM
  statusSPK : ENUM
  jumlah : DECIMAL
  accCetak : BOOLEAN
  deletedAt : DATETIME
}

entity BAHAN_BAKU {
  * id : VARCHAR <<PK>>
  --
  * unitId : VARCHAR <<FK>>
  nama : TEXT
  stok : DECIMAL
  minStok : DECIMAL
  isActive : BOOLEAN
}

entity PENERIMAAN_BARANG {
  * id : VARCHAR <<PK>>
  --
  supplierId : VARCHAR <<FK>>
  addedById : VARCHAR <<FK>>
  nomorFaktur : VARCHAR
  tanggal : DATETIME
  totalTagihan : DECIMAL
  buktiNota : TEXT
  deletedAt : DATETIME
}

entity STOK_MASUK {
  * id : VARCHAR <<PK>>
  --
  * penerimaanId : VARCHAR <<FK>>
  * bahanBakuId : VARCHAR <<FK>>
  jumlah : DECIMAL
  hargaBeli : DECIMAL
  totalHargaItem : DECIMAL
}

entity PENGELUARAN_BARANG {
  * id : VARCHAR <<PK>>
  --
  spkId : VARCHAR <<FK>>
  addedById : VARCHAR <<FK>>
  tanggal : DATETIME
  keterangan : TEXT
  deletedAt : DATETIME
}

entity STOK_KELUAR {
  * id : VARCHAR <<PK>>
  --
  * pengeluaranId : VARCHAR <<FK>>
  * bahanBakuId : VARCHAR <<FK>>
  jumlah : DECIMAL
}

entity PAYMENT {
  * id : VARCHAR <<PK>>
  --
  * orderId : VARCHAR <<FK>>
  userId : VARCHAR <<FK>>
  nominal : DECIMAL
  metodePembayaran : ENUM
  tanggal : DATETIME
  deletedAt : DATETIME
}

entity AKUN {
  * id : VARCHAR <<PK>>
  --
  * kodeAkun : VARCHAR <<UK>>
  namaAkun : TEXT
  kelompok : VARCHAR
  posisiNormal : ENUM
  isActive : BOOLEAN
}

entity JURNAL_UMUM {
  * id : VARCHAR <<PK>>
  --
  * akunDebetId : VARCHAR <<FK>>
  * akunKreditId : VARCHAR <<FK>>
  paymentId : VARCHAR <<FK>>
  penerimaanId : VARCHAR <<FK>>
  createdById : VARCHAR <<FK>>
  ref : VARCHAR
  tanggal : DATETIME
  namaBiaya : TEXT
  nominal : DECIMAL
  deletedAt : DATETIME
}

entity KAS_BANK {
  * id : VARCHAR <<PK>>
  --
  akunId : VARCHAR <<FK>>
  namaRekening : TEXT
  jenisRekening : VARCHAR
  nomorRekening : VARCHAR
  isActive : BOOLEAN
}

' ── Relasi ──
USER ||--o{ ORDER : "membuat"
USER ||--o{ PAYMENT : "mencatat"
USER ||--o{ SPK : "membuat"
USER ||--o{ DESIGN_FILE : "upload"
USER ||--o{ PENERIMAAN_BARANG : "mencatat"
USER ||--o{ PENGELUARAN_BARANG : "mencatat"
USER ||--o{ JURNAL_UMUM : "mencatat"

CUSTOMER ||--o{ ORDER : "melakukan"
CATEGORY ||--o{ PRODUCT : "memiliki"
UNIT ||--o{ PRODUCT : "satuan"
UNIT ||--o{ BAHAN_BAKU : "satuan"

ORDER ||--o{ ORDER_ITEM : "berisi"
ORDER ||--o{ PAYMENT : "memiliki"
ORDER ||--|| SPK : "memiliki"
ORDER ||--o{ DESIGN_FILE : "memiliki"
ORDER_ITEM }o--|| PRODUCT : "produk"

SPK }o--|| KARYAWAN : "dikerjakan"
SPK ||--o{ PENGELUARAN_BARANG : "menghasilkan"

SUPPLIER ||--o{ PENERIMAAN_BARANG : "sumber"
PENERIMAAN_BARANG ||--o{ STOK_MASUK : "berisi"
PENERIMAAN_BARANG ||--o{ JURNAL_UMUM : "dicatat"
STOK_MASUK }o--|| BAHAN_BAKU : "menambah stok"

PENGELUARAN_BARANG ||--o{ STOK_KELUAR : "berisi"
STOK_KELUAR }o--|| BAHAN_BAKU : "mengurangi stok"

PAYMENT ||--o{ JURNAL_UMUM : "dicatat"
AKUN ||--o{ JURNAL_UMUM : "debet"
AKUN ||--o{ JURNAL_UMUM : "kredit"
AKUN ||--o{ KAS_BANK : "terhubung"

@enduml
